syntax = "proto3";
package user.v1;

option java_package = "com.fintech.user.v1";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ============================================
// USER SERVICE - gRPC Contract
// ============================================

service UserService {
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc ValidateUsers(ValidateUsersRequest) returns (ValidateUsersResponse);
    rpc GetUserKYCStatus(GetUserRequest) returns (UserKYCResponse);
    rpc Health(google.protobuf.Empty) returns (HealthCheckResponse);
}

// ============================================
// REQUEST MESSAGES
// ============================================

message GetUserRequest {
    string user_id = 1;
    string trace_id = 2;
}

message ValidateUsersRequest {
    repeated string user_ids = 1;
    string trace_id = 2;
}

// ============================================
// RESPONSE MESSAGES
// ============================================

message ValidateUsersResponse {
    bool all_valid = 1;
    map<string, UserValidation> validations = 2;
}

message UserValidation {
    bool is_valid = 1;
    bool is_account_active = 2;
    bool is_kyc_approved = 3;
    string failure_reason = 4;
}

message UserResponse {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    string kyc_status = 6;
    string account_status = 7;
    bool is_email_verified = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    google.protobuf.Timestamp kyc_verified_at = 11;
}

message UserKYCResponse {
    string user_id = 1;
    string kyc_status = 2;
    bool is_verified = 3;
    google.protobuf.Timestamp verified_at = 4;
}

message HealthCheckResponse {
    string status = 1;
    string version = 2;
    google.protobuf.Timestamp timestamp = 3;
    map<string, string> details = 4;
}